# i18n-hardcode-scanner

./: .gitignore  LICENSE  README.md  i18n_hardcode_scanner.py  pyproject.toml
examples/: I18nProvider.tsx  LanguagePicker.tsx  LanguageSelector.tsx  README.md  i18n.ts
readmes/: README.ar.md  README.de.md  README.es.md  README.fa.md  README.fr.md  README.he.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pl.md  README.pt.md  README.ru.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md
scripts/: no-emoji-i18n.sh  sync-i18n.py  sync-readmes.py
