[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "i18n-hardcode-scanner"
version = "1.0.0"
description = "Language-agnostic scanner for hardcoded UI text in Next.js projects"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Nans"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Internationalization",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Nansoouu/i18n-hardcode-scanner"
